# GPGImageViewer

./: .gitignore  app.py  pyproject.toml
settings/: settings.py
ui/: main.ui  ui.py
