[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["00XAH00 <pxaxulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
#python = "^3.9"
python = ">=3.9, <3.10"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
pyqt6 = "^6.4.0"
pyinstaller = "^5.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

